增加数据分片（只分库）范例程序；优化读写分离范例程序

--- a/pangu-website/docs/advanced-guide/数据治理之数据分片.md
+++ b/pangu-website/docs/advanced-guide/数据治理之数据分片.md
@@ -19,7 +19,7 @@ import TabItem from '@theme/TabItem';
 
 随着业务规模不断的扩大，将数据集中存储到单一节点的解决方案，在**性能**、**可用性**和**运维成本**等方面已经难于满足高并发和海量数据系统的场景。从性能方面来说，高并发访问请求使得集中式数据库成为系统的最大瓶颈；从可用性的方面来讲，单一数据节点或简单主从架构，已经越来越难以满足大量互联网 To C 业务对高可用的迫切诉求，数据库的可用性俨然已成为整个系统的关键；从运维成本和风险方面考虑，当一个数据库实例中的数据达到阈值以上，数据备份和恢复的时间成本和风险都将随着数据量的大小而愈发不可控。
 
-因此，通过数据分片将存放在单一库中的数据分散至多个库或表中以达到提升性能、提高可用性和降低运维成本的效果。数据分片的有效手段是对数据库进行分库和分表。分库和分表均可以有效的避免由数据量超过可承受阈值而产生的查询瓶颈，同时也是应对高并发和海量数据系统的有效手段。
+因此，通过数据分片将存放在单一库中的数据分散至多个库或表中以达到提升性能、提高可用性和降低运维成本的效果。分库和分表均可以有效的避免由数据量超过可承受阈值而产生的查询瓶颈，同时也是应对高并发和海量数据系统的有效手段。
 
 ### 数据分片类型
 数据分片可分为垂直分片和水平分片。
@@ -46,8 +46,7 @@ import TabItem from '@theme/TabItem';
 - 分片参考临界值：一般来讲 MySQL单表记录控制在 1000 万以内、数据库单实例数据大小控制在 1 TB 以内是比较合理的范围。
 - 分表不分库仅涉及本地事务，垂直分片和水平分片的分库分表均会带来分布式事务。设计过程应考虑不要人为扩大没必要的分布式事务使用边界。
 - 分片键的规划尤为重要，需要结合业务特点来精心设计。
-- 以尽量单表查询的原则设计分片逻辑。
-- 对于大型应用来说，垂直分片和水平分片一定是联合使用的。但对于一些中小型应用而言，可以只采用水平分片（分库分表或只分表）。
+- 对分片表的查询必须包含分片键，切尽可能的保持单表。分片表的关联查询，请结合绑定表和广播表酌情合理使用。
 
 总之，采用什么样的数据架构需要结合**性能诉求**、**可用性**、**运维成本**、**开发成本**、**项目背景**和**业务场景**等方面来做权衡选择。上述仅为一些孤立的参考原则。
 
@@ -131,11 +130,10 @@ import TabItem from '@theme/TabItem';
 </Tabs>
 
 ## 编程实战一：只分表
-
 ### 初始化数据库环境
 
-数据库表结构如下图所示。
-<img width="200"
+数据库表结构和分片算法逻辑如下图所示。
+<img width="350"
   src={require('/resources/doc/31-pangu-framework-sharding.png').default}
   alt="数据分片实现-只分表" />
 
@@ -161,42 +159,39 @@ mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.shardingsphere.mode.type=Memory
-spring.shardingsphere.datasource.names=ds
-spring.shardingsphere.datasource.ds.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
-spring.shardingsphere.datasource.ds.username=root
-spring.shardingsphere.datasource.ds.password=123456
-
 # print shardingsphere Actual SQL log
 spring.shardingsphere.props.sql-show=true
+spring.shardingsphere.datasource.names=ds-0
+
+spring.shardingsphere.datasource.ds-0.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds-0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds-0.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
+spring.shardingsphere.datasource.ds-0.username=root
+spring.shardingsphere.datasource.ds-0.password=123456
 
 # sharding table `t_order` configuration
-spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds.t_order$->{0..1}
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds-0.t_order$->{0..1}
 spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
-spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa1
-spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=order_id
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa-0
 
 # sharding-algorithms configuration
-spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.type=INLINE
-spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.props.algorithm-expression=t_order$->{order_id % 2}
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.props.algorithm-expression=t_order$->{order_id % 2}
 ```
+#### 关键配置项说明
+配置项 | 配置说明  
+--- | ---
+*.t_order.actual-data-nodes | 表 t_order 对应的数据节点（真实表）
+*.t_order.table-strategy.standard.sharding-column | 表 t_order 的分片键
+*.t_order.table-strategy.standard.sharding-algorithm-name | 表 t_order 的分片算法名称（自定义标识符）
+*.sharding-algorithms.sa-0.type | 分片算法 sa-0 的类型（INLINE：内置算法）
+*.sharding-algorithms.sa-0.props.algorithm-expression | 分片算法 sa-0 的分片表达式
 
 ### 测试用例
 
-#### 启动类
-```jsx
-@EnableTransactionManagement
-@SpringBootApplication
-public class ShardingApplication {
-	public static void main(String[] args) {
-		PanGuApplicationBuilder.init(ShardingApplication.class).run(args);
-	}
-}
-```
-
 #### 测试写入数据分片
-如下代码将根据配置好的分片算法将数据分别写入对应的真实分片表中。
+写入时将分片键 order_id 对 2 求模，并根据求模结果将订单数据分片到 2 个表中存储。
+
 ```jsx
 @Test
 public void createOrder() {
@@ -212,23 +207,26 @@ public void createOrder() {
 private Long orderId;
 ```
 
-#### 测试查询结果聚合
-ID 150681599250 和 150683023105 分别为真实表 t_order0 和 t_order1 的主键 ID。
+#### 测试根据分片键路由查询
+根据分片算法，将SQL查询请求路由到对应的真实表查询。
 ```jsx
 @Test
-public void mergeQueryWithShardingColumn() {
-	LambdaQueryWrapper<TOrderEntity> lambdaQueryWrapper = Wrappers.lambdaQuery();
-	lambdaQueryWrapper.in(TOrderEntity::getOrderId, 150681599250L,150683023105L);
-	List<TOrderEntity> tOrderEntities = tOrderMapper.selectList(lambdaQueryWrapper);
-	log.info("结果集：{}", tOrderEntities);
+public void routingQuery() {
+	TOrderEntity entity = tOrderMapper.selectById(150681599250L);
+	log.info("结果集：{}" , entity);
+	TOrderEntity entity2 = tOrderMapper.selectById(150683023105L);
+	log.info("结果集：{}" , entity2);
 }
 ```
+#### 测试结果集归并、绑定表关联查询、强制路由等特性
+不再赘述。请直接获取 [本范例源码](#本文相关范例源码) 查看。
 
 ## 编程实战二：只分库
+
 ### 初始化数据库环境
 
-数据库表结构如下图所示。
-<img width="200"
+数据库表结构和分片算法逻辑如下图所示。
+<img width="350"
   src={require('/resources/doc/32-pangu-framework-sharding.png').default}
   alt="数据分片实现-只分库" />
 
@@ -244,35 +242,74 @@ mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.shardingsphere.mode.type=Memory
-spring.shardingsphere.datasource.names=ds
-spring.shardingsphere.datasource.ds.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
-spring.shardingsphere.datasource.ds.username=root
-spring.shardingsphere.datasource.ds.password=123456
-
 # print shardingsphere Actual SQL log
 spring.shardingsphere.props.sql-show=true
+spring.shardingsphere.datasource.names=ds-0,ds-1
+
+spring.shardingsphere.datasource.ds-0.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds-0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds-0.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
+spring.shardingsphere.datasource.ds-0.username=root
+spring.shardingsphere.datasource.ds-0.password=123456
+
+spring.shardingsphere.datasource.ds-1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds-1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1
+spring.shardingsphere.datasource.ds-1.username=root
+spring.shardingsphere.datasource.ds-1.password=123456
 
 # sharding table `t_order` configuration
-spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds.t_order$->{0..1}
-spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
-spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa1
-spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=order_id
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds-$->{0..1}.t_order
+spring.shardingsphere.rules.sharding.default-database-strategy.standard.sharding-column=user_id
+spring.shardingsphere.rules.sharding.default-database-strategy.standard.sharding-algorithm-name=sa-0
 
 # sharding-algorithms configuration
-spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.type=INLINE
-spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.props.algorithm-expression=t_order$->{order_id % 2}
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.props.algorithm-expression=ds-$->{user_id % 2}
 ```
+#### 关键配置项说明
+配置项 | 配置说明  
+--- | ---
+*.t_order.actual-data-nodes | 表 t_order 对应的数据节点（真实表）
+*.default-database-strategy.standard.sharding-column | 表 t_order 的分片键
+*.default-database-strategy.standard.sharding-algorithm-name | 表 t_order 的分片算法名称（自定义标识符）
+*.sharding-algorithms.sa-0.type | 分片算法 sa-0 的类型（INLINE：内置算法）
+*.sharding-algorithms.sa-0.props.algorithm-expression | 分片算法 sa-0 的分片表达式
 
 ### 测试用例
+#### 测试写入数据分片
+写入时将分片键：user_id 对 2 求模，根据求模结果将不同用户的订单数据分到2个库中存储。
 
+```jsx
+@Test
+public void createOrder() {
+	TOrderEntity entity1 = new TOrderEntity().setUserId(1).setStatus("0");
+	tOrderMapper.insert(entity1);
+	TOrderEntity entity2 = new TOrderEntity().setUserId(2).setStatus("0");
+	tOrderMapper.insert(entity2);
+}
+```
+
+#### 测试根据分片键路由查询
+根据分片算法，将SQL查询请求路由到对应的真实表查询。
+```jsx
+@Test
+public void routingQuery() {
+	List<TOrderEntity> list1 = tOrderMapper.selectList(Wrappers.<TOrderEntity>lambdaQuery().eq(TOrderEntity::getUserId, 1));
+	log.info("结果集：{}" , list1);
+	List<TOrderEntity> list2 = tOrderMapper.selectList(Wrappers.<TOrderEntity>lambdaQuery().eq(TOrderEntity::getUserId, 2));
+	log.info("结果集：{}" , list2);
+}
+```
+#### 测试结果集归并、绑定表关联查询、强制路由等特性
+不再赘述。请直接获取 [本范例源码](#本文相关范例源码) 查看。
 
 ## 编程实战三：分库分表
+
 ### 初始化数据库环境
 
-数据库表结构如下图所示。
-<img width="200"
+数据库表结构和分片算法逻辑如下图所示。
+<img width="400"
   src={require('/resources/doc/33-pangu-framework-sharding.png').default}
   alt="数据分片实现-只分库" />
 
@@ -288,30 +325,86 @@ mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.shardingsphere.mode.type=Memory
-spring.shardingsphere.datasource.names=ds
-spring.shardingsphere.datasource.ds.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
-spring.shardingsphere.datasource.ds.username=root
-spring.shardingsphere.datasource.ds.password=123456
-
 # print shardingsphere Actual SQL log
 spring.shardingsphere.props.sql-show=true
+spring.shardingsphere.datasource.names=ds-0,ds-1
+
+spring.shardingsphere.datasource.ds-0.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds-0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds-0.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
+spring.shardingsphere.datasource.ds-0.username=root
+spring.shardingsphere.datasource.ds-0.password=123456
+
+spring.shardingsphere.datasource.ds-1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds-1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1
+spring.shardingsphere.datasource.ds-1.username=root
+spring.shardingsphere.datasource.ds-1.password=123456
 
 # sharding table `t_order` configuration
-spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds.t_order$->{0..1}
+spring.shardingsphere.rules.sharding.default-database-strategy.standard.sharding-column=user_id
+spring.shardingsphere.rules.sharding.default-database-strategy.standard.sharding-algorithm-name=sa-0
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds-$->{0..1}.t_order$->{0..1}
 spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
-spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa1
-spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=order_id
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa-1
 
-# sharding-algorithms configuration
-spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.type=INLINE
-spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.props.algorithm-expression=t_order$->{order_id % 2}
+# sharding databases algorithms configuration
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.props.algorithm-expression=ds-$->{user_id % 2}
+# sharding tables algorithms configuration
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-1.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-1.props.algorithm-expression=t_order$->{order_id % 2}
 ```
+#### 关键配置项说明
+配置项 | 配置说明  
+--- | ---
+*.t_order.actual-data-nodes | 表 t_order 对应的数据节点（真实表）
+*.default-database-strategy.standard.sharding-column | 表 t_order 的分库分片键
+*.default-database-strategy.standard.sharding-algorithm-name | 表 t_order 的分库分片算法名称
+*.t_order.table-strategy.standard.sharding-column | 表 t_order 的库内分表分片键
+*.t_order.table-strategy.standard.sharding-algorithm-name | 表 t_order 的库内分表算法名称
+*.sharding-algorithms.sa-0.type | 分库算法的类型
+*.sharding-algorithms.sa-0.props.algorithm-expression | 分库表达式
+*.sharding-algorithms.sa-1.type | 库内分表算法的类型
+*.sharding-algorithms.sa-1.props.algorithm-expression | 库内分表表达式
 
 ### 测试用例
+#### 测试写入数据分片
+写入时将分片键 user_id 对 2 求模，根据求模结果将订单数据分片到 2 个库中，再将分片键 order_id 对 2 求模，并根据求模结果将订单数据分片到库中不同的表来存储。（注意：本例有两个分片键，第一个用来分库；第二个用来库内分表。）
 
+```jsx
+@Test
+public void createOrder() {
+	TOrderEntity entity1 = new TOrderEntity().setUserId(1).setStatus("0");
+	tOrderMapper.insert(entity1);
+	TOrderEntity entity2 = new TOrderEntity().setUserId(2).setStatus("0");
+	tOrderMapper.insert(entity2);
+}
+```
+`TOrderEntity` 的 orderId 主键请通过如下注解生成。当然也可以自定义 ID 算法赋值。
+```jsx
+@TableId(value = "order_id", type = IdType.ASSIGN_ID)
+private Long orderId;
+```
 
+#### 测试根据分片键路由查询
+根据分片算法，将SQL查询请求路由到对应的真实表查询。
+```jsx
+@Test
+public void routingQuery() {
+	List<TOrderEntity> list1 = tOrderMapper.selectList(Wrappers.<TOrderEntity>lambdaQuery().eq(TOrderEntity::getUserId, 1));
+	log.info("结果集：{}" , list1);
+	List<TOrderEntity> list2 = tOrderMapper.selectList(Wrappers.<TOrderEntity>lambdaQuery().eq(TOrderEntity::getUserId, 2));
+	log.info("结果集：{}" , list2);
+}
+```
+#### 测试结果集归并、绑定表关联查询、强制路由等特性
+不再赘述。请直接获取 [本范例源码](#本文相关范例源码) 查看。
+
+:::warning 警报
+- 对分片表的查询操作，查询条件务必要包含分片键，否则会遍历所有数据节点。尽量维持单表查询。
+- 如果需要关联查询，请结合绑定表、广播表酌情合理应用。
+:::
 
 ## 本文相关范例源码
 - [pangu-examples-shardingsphere-sharding](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-shardingsphere-sharding)：数据治理之数据分片范例
