--- a/pangu-website/docs/advanced-guide/数据治理之读写分离.md
+++ b/pangu-website/docs/advanced-guide/数据治理之读写分离.md
@@ -71,49 +71,17 @@ import TabItem from '@theme/TabItem';
 本实例以一主二从的数据库主从集群为例，来演示如何基于盘古框架开发一个读写分离且支持读负载均衡的范例程序。
 
 ### 初始化数据库环境
-> 基于一个用户信息表来演示。为了方便查看测试效果，我们分别把三个库中的用户姓名字段的值打上不同的标记。
 
-<Tabs>
-<TabItem value="master" label="主库 DDL">
-
-``` jsx
-主库 DB：pangu-examples
-
-CREATE TABLE `user` (
-  `id` bigint(20) NOT NULL AUTO_INCREMENT COMMENT '流水号',
-  `name` varchar(255) NOT NULL COMMENT '姓名',
-  `birthday` date DEFAULT NULL COMMENT '生日',
-  `age` int(11) DEFAULT NULL COMMENT '年龄',
-  `user_type` varchar(255) DEFAULT NULL COMMENT '用户类型',
-  `gmt_create` datetime DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
-  `gmt_update` datetime DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
-  PRIMARY KEY (`id`) USING BTREE
-) ENGINE=InnoDB AUTO_INCREMENT=20 DEFAULT CHARSET=utf8mb4 COMMENT='用户信息表';
-
-INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（master）', NULL, 18, '1');
+``` jsx title="主库 DB"
+create table t_order
+(
+    order_id bigint auto_increment primary key,
+    user_id  int         not null,
+    status   varchar(50) null
+)
+    comment '订单表';
 ```
-</TabItem>
-<TabItem value="slave-0" label="从库1 DDL">
-
-```jsx
-从库1 DB：pangu-examples-0
-
-CREATE TABLE...（建表脚本同主库）
-
-INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（slave-0）', NULL, 18, '1');
-```
-</TabItem>
-<TabItem value="account" label="从库2 DDL">
-
-```jsx
-从库2 DB：pangu-examples-1
-
-CREATE TABLE...（建表脚本同主库）
-
-INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（slave-1）', NULL, 18, '1');
-```
-</TabItem>
-</Tabs>
+根据上述脚本，再创建从库 1 和 从库 2 的 t_order 表。（仅演示读写分离效果，不搭建真实主从复制集群，可手工插入从库所需测试数据）
 
 ### 安装相关盘古模块
 
@@ -163,22 +131,14 @@ INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC
 
 > 为便于理解，本文基于本地配置的方式编写。若改为标准的 Nacos 配置中心模式，请参阅：[配置中心](/docs/advanced-guide/nacos-config-center)章节。
 
-<Tabs>
-<TabItem value="application" label="application.properties">
-
-```jsx
-spring.profiles.active=${spring.profiles.active:dev}
-```
-</TabItem>
-<TabItem value="application-dev" label="application-dev.properties">
-
 ```jsx
 spring.application.name=pangu-examples-shardingsphere-readwrite-splitting
 
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-
+# print shardingsphere Actual SQL log
+spring.shardingsphere.props.sql-show=true
 spring.shardingsphere.datasource.names=ds-master,ds-slave-0,ds-slave-1
 
 # 主库数据源配置
@@ -186,21 +146,21 @@ spring.shardingsphere.datasource.ds-master.type=com.zaxxer.hikari.HikariDataSour
 spring.shardingsphere.datasource.ds-master.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.ds-master.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
 spring.shardingsphere.datasource.ds-master.username=root
-spring.shardingsphere.datasource.ds-master.password=root123456
+spring.shardingsphere.datasource.ds-master.password=123456
 
-# 从库1数据源配置
+# 从库 1 数据源配置
 spring.shardingsphere.datasource.ds-slave-0.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds-slave-0.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.ds-slave-0.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-0
 spring.shardingsphere.datasource.ds-slave-0.username=root
-spring.shardingsphere.datasource.ds-slave-0.password=root123456
+spring.shardingsphere.datasource.ds-slave-0.password=123456
 
-# 从库2数据源配置
+# 从库 2 数据源配置
 spring.shardingsphere.datasource.ds-slave-1.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds-slave-1.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.ds-slave-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1
 spring.shardingsphere.datasource.ds-slave-1.username=root
-spring.shardingsphere.datasource.ds-slave-1.password=root123456
+spring.shardingsphere.datasource.ds-slave-1.password=123456
 
 # 读写分离策略配置
 spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.type=Static
@@ -210,69 +170,9 @@ spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.wri
 spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.read-data-source-names=ds-slave-0,ds-slave-1
 # 读负载均衡算法配置
 spring.shardingsphere.rules.readwrite-splitting.load-balancers.read-random.type=RANDOM
-
-
-logging.level.root=INFO
-logging.level.com.gitee.pulanos.pangu=INFO
-```
-</TabItem>
-</Tabs>
-
-### 主要逻辑代码
-
-#### 读操作自动走从库负载均衡
-```jsx
-public void readRoute() {
-	log.info("查询数据...");
-	UserEntity userEntity = userMapper.selectById(1L);
-	log.info("查询结果 {}", userEntity);
-}
 ```
 
-#### 读操作强制走主库
-```jsx
-public void readByWriteRoute() {
-	HintManager hintManager = HintManager.getInstance();
-	hintManager.setWriteRouteOnly();
-	try {
-		log.info("查询数据（强制走主库）...");
-		UserEntity userEntity = userMapper.selectById(1L);
-		log.info("查询结果 {}", userEntity);
-	} finally {
-		hintManager.close();
-	}
-}
-```
-
-#### 写操作自动走主库
-```jsx
-public int writeRoute() {
-	log.info("插入数据...");
-	UserEntity userEntity = new UserEntity();
-	userEntity.setName("XC").setAge(18).setUserType("1");
-	int row = userMapper.insert(userEntity);
-	log.info("成功插入{}条数据。{}", row, userEntity);
-	return row;
-}
-```
-
-#### 事务方法里的所有读写操作都自动走主库
-```jsx
-@Transactional(rollbackFor = RuntimeException.class)
-public void doWithTransaction() {
-	log.info("插入数据...");
-	UserEntity userEntity = new UserEntity();
-	userEntity.setName("XC").setAge(18).setUserType("1");
-	int row = userMapper.insert(userEntity);
-	log.info("成功插入{}条数据。{}", row, userEntity);
-	log.info("查询数据（强制走主库）...");
-	UserEntity userEntityRead = userMapper.selectById(1L);
-	log.info("查询结果 {}", userEntityRead);
-}
-```
-
-## 测试
-
+## 测试用例
 ### 启动类
 ```jsx
 @EnableTransactionManagement
@@ -284,9 +184,14 @@ public class ReadWriteSplittingApplication {
 }
 ```
 
-### 测试用例
-
-#### 测试读操作自动走从库负载均衡
+### 测试写操作自动走主库
+```jsx
+@Test
+public void writeRoute() {
+	readWriteSplittingService.writeRoute();
+}
+```
+### 测试读操作自动走从库负载均衡
 ```jsx
 @Test
 public void readRoute() {
@@ -295,7 +200,7 @@ public void readRoute() {
 }
 ```
 
-#### 测试读操作强制走主库
+### 测试读操作强制走主库
 ```jsx
 @Test
 public void readByWriteRoute() {
@@ -303,15 +208,8 @@ public void readByWriteRoute() {
 }
 ```
 
-#### 测试写操作自动走主库
-```jsx
-@Test
-public void writeRoute() {
-	readWriteSplittingService.writeRoute();
-}
-```
-
-#### 测试事务方法里的所有读写操作都自动走主库
+### 测试事务方法自动走主库
+事务方法里的所有读写操作都自动走主库。
 ```jsx
 @Test
 public void doWithTransaction() {
