更新数据分片相关文档

--- a/pangu-website/docs/advanced-guide/数据治理之读写分离.md
+++ b/pangu-website/docs/advanced-guide/数据治理之读写分离.md
@@ -139,7 +139,7 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # print shardingsphere Actual SQL log
 spring.shardingsphere.props.sql-show=true
-spring.shardingsphere.datasource.names=ds-master,ds-slave-0,ds-slave-1
+spring.shardingsphere.datasource.names=ds-master,ds-slave-1,ds-slave-2
 
 # 主库数据源配置
 spring.shardingsphere.datasource.ds-master.type=com.zaxxer.hikari.HikariDataSource
@@ -149,25 +149,25 @@ spring.shardingsphere.datasource.ds-master.username=root
 spring.shardingsphere.datasource.ds-master.password=123456
 
 # 从库 1 数据源配置
-spring.shardingsphere.datasource.ds-slave-0.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds-slave-0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds-slave-0.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-0
-spring.shardingsphere.datasource.ds-slave-0.username=root
-spring.shardingsphere.datasource.ds-slave-0.password=123456
-
-# 从库 2 数据源配置
 spring.shardingsphere.datasource.ds-slave-1.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds-slave-1.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds-slave-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1
+spring.shardingsphere.datasource.ds-slave-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-0
 spring.shardingsphere.datasource.ds-slave-1.username=root
 spring.shardingsphere.datasource.ds-slave-1.password=123456
+
+# 从库 2 数据源配置
+spring.shardingsphere.datasource.ds-slave-2.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds-slave-2.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds-slave-2.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1
+spring.shardingsphere.datasource.ds-slave-2.username=root
+spring.shardingsphere.datasource.ds-slave-2.password=123456
 
 # 读写分离策略配置
 spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.type=Static
 # 写数据源配置
 spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.write-data-source-name=ds-master
 # 读数据源配置
-spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.read-data-source-names=ds-slave-0,ds-slave-1
+spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.read-data-source-names=ds-slave-1,ds-slave-2
 # 读负载均衡算法配置
 spring.shardingsphere.rules.readwrite-splitting.load-balancers.read-random.type=RANDOM
 ```
@@ -188,15 +188,16 @@ public class ReadWriteSplittingApplication {
 ```jsx
 @Test
 public void writeRoute() {
-	readWriteSplittingService.writeRoute();
+	TOrderEntity entity = new TOrderEntity().setUserId(1).setStatus("测试");
+	tOrderMapper.insert(entity);
 }
 ```
 ### 测试读操作自动走从库负载均衡
 ```jsx
 @Test
 public void readRoute() {
-	readWriteSplittingService.readRoute();
-	readWriteSplittingService.readRoute();
+	tOrderMapper.selectById(1508317805991194627L);
+	tOrderMapper.selectById(1508317805991194628L);
 }
 ```
 
@@ -204,7 +205,15 @@ public void readRoute() {
 ```jsx
 @Test
 public void readByWriteRoute() {
-	readWriteSplittingService.readByWriteRoute();
+	HintManager hintManager = HintManager.getInstance();
+	hintManager.setWriteRouteOnly();
+	try {
+		log.info("查询数据（强制走主库）...");
+		TOrderEntity entity = tOrderMapper.selectById(2L);
+		log.info("查询结果 {}", entity);
+	} finally {
+		hintManager.close();
+	}
 }
 ```
 
@@ -212,8 +221,13 @@ public void readByWriteRoute() {
 事务方法里的所有读写操作都自动走主库。
 ```jsx
 @Test
+@Transactional(rollbackFor = RuntimeException.class)
 public void doWithTransaction() {
-	readWriteSplittingService.doWithTransaction();
+	log.info("插入数据...");
+	TOrderEntity entity = new TOrderEntity().setUserId(1).setStatus("测试");
+	tOrderMapper.insert(entity);
+	log.info("查询数据（事务方法内所有请求自动走主库）...");
+	tOrderMapper.selectById(1L);
 }
 ```
 
