更新数据分片相关文档2

--- a/pangu-website/docs/advanced-guide/数据治理之数据分片.md
+++ b/pangu-website/docs/advanced-guide/数据治理之数据分片.md
@@ -141,8 +141,7 @@ import TabItem from '@theme/TabItem';
 ```jsx
 create table t_order
 (
-    order_id bigint      not null
-        primary key,
+    order_id bigint      not null primary key,
     user_id  int         not null,
     status   varchar(50) null
 )
@@ -179,7 +178,7 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.type=INLINE
 spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.props.algorithm-expression=t_order$->{order_id % 2}
 ```
 #### 关键配置项说明
-配置项 | 配置说明  
+|<div style={{width:'500px'}}>配置项</div> | <div style={{width:'300px'}}>配置说明</div>
 --- | ---
 *.t_order.actual-data-nodes | 表 t_order 对应的数据节点（真实表）
 *.t_order.table-strategy.standard.sharding-column | 表 t_order 的分片键
@@ -268,7 +267,7 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.type=INLINE
 spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.props.algorithm-expression=ds-$->{user_id % 2}
 ```
 #### 关键配置项说明
-配置项 | 配置说明  
+|<div style={{width:'500px'}}>配置项</div> | <div style={{width:'300px'}}>配置说明</div>  
 --- | ---
 *.t_order.actual-data-nodes | 表 t_order 对应的数据节点（真实表）
 *.default-database-strategy.standard.sharding-column | 表 t_order 的分片键
@@ -356,7 +355,7 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.sa-1.type=INLINE
 spring.shardingsphere.rules.sharding.sharding-algorithms.sa-1.props.algorithm-expression=t_order$->{order_id % 2}
 ```
 #### 关键配置项说明
-配置项 | 配置说明  
+|<div style={{width:'500px'}}>配置项</div> | <div style={{width:'300px'}}>配置说明</div>
 --- | ---
 *.t_order.actual-data-nodes | 表 t_order 对应的数据节点（真实表）
 *.default-database-strategy.standard.sharding-column | 表 t_order 的分库分片键
