--- a/pangu-website/docs/致敬 & 鸣谢.md
+++ b/pangu-website/docs/致敬 & 鸣谢.md
@@ -34,6 +34,7 @@ slug: /thanks
 - [Laying Cahce](https://github.com/xiaolyuh/layering-cache)：A multi-level caching framework that supports distributed environments. It uses Caffeine as a level 1 local cache and Redis as a level 2 centralized cache.
 - [ShardingSphere-JDBC](https://shardingsphere.apache.org/index.html)：With the client end connecting directly to the database, it provides services in the form of a jar and requires no extra deployment and dependence for data sharding, readwrite-splitting, data encryption and shadow database etc.
 - [Seata](https://seata.io/en-us/index.html)：Seata is an open source distributed transaction solution that delivers high performance and easy to use distributed transaction services under a microservices architecture.
+- [Sentinel](https://sentinelguard.io/en-us/) A powerful flow control component enabling reliability, resilience and monitoring for microservices. 
 - [Lock4j](https://gitee.com/baomidou/lock4j)：Lock4j is a distributed lock component.
 - [Hutool](https://hutool.cn/docs)：A set of tools that keep Java sweet.
 
