数据分片文档。

--- a/pangu-website/docs/advanced-guide/数据治理之数据分片.md
+++ b/pangu-website/docs/advanced-guide/数据治理之数据分片.md
@@ -5,8 +5,8 @@ sidebar_position: 26
 slug: /advanced-guide/data-sharding
 ---
 <head>
-  <title>盘古开发框架 | 数据治理之数据持久化 | ShardingSphere-JDBC</title>
-  <meta name="keywords" content="盘古开发框架 | 数据治理之数据持久化 | ShardingSphere-JDBC" />
+  <title>数据治理之数据分片 | 盘古开发框架 </title>
+  <meta name="keywords" content="盘古开发框架 | 数据治理之数据分片 | ShardingSphere-JDBC" />
   <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
 </head>
 
