--- a/pangu-website/docs/安装.md
+++ b/pangu-website/docs/安装.md
@@ -13,9 +13,7 @@ slug: /install
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-本文将介绍如何通过包依赖管理工具安装盘古框架。
-
-> 请将版本号 `latest.version.xxx` 替换为当前最新版本号为：`5.0.8`。
+盘古开发框架已经发布到 Maven 中央仓库，直接使用如下方法安装使用即可。
 
 ## 依赖管理模块
 盘古资源依赖声明管理模块。所有盘古引用都应该依赖这个模块。
@@ -41,6 +39,10 @@ implementation 'com.gitee.pulanos.pangu:pangu-parent:latest.version.xxx'
 ```
 </TabItem>
 </Tabs>
+
+:::tip
+请将版本号 `latest.version.xxx` 替换为当前最新版本号为，如：`5.0.8`。
+:::
 
 ## 基础模块	
 盘古启动、中心化配置、动态日志等基础能力自动装配模块。
