--- a/pangu-website/docs/开发者社区.md
+++ b/pangu-website/docs/开发者社区.md
@@ -26,6 +26,9 @@ slug: /community
 ## 作者Email
 
  :envelope: &nbsp;18616786188@qq.com
+ 
+## 通知
+我的博客即将同步至 OSCHINA 社区，这是我的 OSCHINA ID：码农大熊，邀请大家一同入驻：https://www.oschina.net/sharing-plan/apply
 
 ## 下一步
 继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
