--- a/pangu-website/docs/quick-start/如何开发单体应用.md
+++ b/pangu-website/docs/quick-start/如何开发单体应用.md
@@ -13,11 +13,11 @@ slug: /quick-start/how-to-make-monomer-architecture-app
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-本文介绍如何基于盘古开发框架开发一个单体分层架构的应用。文中所述仅为搭建一个单体应用的基本框架，增加配置中心、数据持久化、缓存等能力请参考使用指南的相关章节。
+本文介绍如何基于盘古开发框架开发一个单体分层架构的应用。文中所述仅为搭建一个单体应用的基本框架，增加**配置中心、数据持久化、缓存等能力**请参考**开发指南**的相关章节。
 
 ## 安装相关盘古模块
 
-<Tabs>
+<Tabs defaultValue="dependency2">
 <TabItem value="parent" label="盘古 Parent">
 
 ```jsx
@@ -53,15 +53,6 @@ import TabItem from '@theme/TabItem';
 
 > 为便于理解，本文基于本地配置的方式编写。若改为标准的 Nacos 配置中心模式，请参阅：[配置中心](/docs/advanced-guide/nacos-config-center) 章节。
 
-<Tabs>
-<TabItem value="application" label="application.properties">
-
-```jsx
-spring.profiles.active=${spring.profiles.active:dev}
-```
-</TabItem>
-<TabItem value="application-dev" label="application-dev.properties">
-
 ```jsx
 spring.application.name=pangu-examples-empty-web
 spring.jackson.time-zone=GMT+8
@@ -69,8 +60,6 @@ spring.jackson.time-zone=GMT+8
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
 ```
-</TabItem>
-</Tabs>
 
 ## 启动入口
 ```jsx {4}
