--- a/pangu-website/docs/quick-start/开发架构模式对比.md
+++ b/pangu-website/docs/quick-start/开发架构模式对比.md
@@ -32,13 +32,11 @@ slug: /quick-start/how-to-make-architecture
 :::
 
 ## 盘古开发架构选型建议
-:::danger
-如下是从不同维度简单粗暴的以定量或定性的角度给出了一些选型建议，结论是孤立的脱离实际的，仅供参考。采用什么样的架构开发模式不能一概而论，需要大家综合当下实际情况酌情选择。
-:::
+如下是从不同维度简单粗暴的以定量或定性的角度给出了一些选型建议，结论是孤立的脱离实际的，仅供参考。采用什么样的架构开发模式不能一概而论，需要大家综合当下实际情况**酌情选择**。 :ghost: 
 
 | - | 单体分层架构 | 微服务分布式架构  
 --- | :-: | :-:
-开发人员 < 3 | ✔ | 
+开发人员 < 5 | ✔ | 
 研发预算 < 100 w | ✔ |
 用户数较小的管理类系统 | ✔ | 
 面向C端的（移动）互联网应用 |  | ✔
