项目官网 & 文档

--- a/pangu-website/docs/致敬 & 鸣谢.md
+++ b/pangu-website/docs/致敬 & 鸣谢.md
@@ -35,6 +35,7 @@ slug: /thanks
 - [ShardingSphere-JDBC](https://shardingsphere.apache.org/index.html)：With the client end connecting directly to the database, it provides services in the form of a jar and requires no extra deployment and dependence for data sharding, readwrite-splitting, data encryption and shadow database etc.
 - [Seata](https://seata.io/en-us/index.html)：Seata is an open source distributed transaction solution that delivers high performance and easy to use distributed transaction services under a microservices architecture.
 - [Sentinel](https://sentinelguard.io/en-us/) A powerful flow control component enabling reliability, resilience and monitoring for microservices. 
+- [XXL Job](https://github.com/xuxueli/xxl-job)：A distributed task scheduling framework. It's core design goal is to develop quickly and learn simple, lightweight, and easy to expand.
 - [Lock4j](https://gitee.com/baomidou/lock4j)：Lock4j is a distributed lock component.
 - [Hutool](https://hutool.cn/docs)：A set of tools that keep Java sweet.
 
